--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
   "url": "https://ton.vote",
-  "name": "TON Vote",
-  "iconUrl": "https://DeLaVerrierr.github.io/TON-Blockchain/first_contract_front_end/icon.png"
+  "name": "TON 0_0",
+  "iconUrl": "https://DeLaVerrierr.github.io/first_contract_front_end/icon.png"
 }
